Fixed the issue where navbar is behind the button group in Section1_Index.html, and Section1_Index.css

--- a/Nioh1/Section_1/Section1_Index.css
+++ b/Nioh1/Section_1/Section1_Index.css
@@ -17,7 +17,7 @@ Styling Sheet for Section1_Index.html
 }
 
 #complete_button_group {
-    margin-top: 25em;
+    margin-top: 21em;
 }
 
 #complete_button_group_2 {
